Homepage design and development is finished

--- a/index.html
+++ b/index.html
@@ -163,10 +163,10 @@
           <div class="row flex-lg-row-reverse">
             <div class="col-lg-7">
               <div class="banner__image-wrapper">
-                <img
-                  src="./assets/images/banner/37.png"
+                   <img
+                  src="./assets/images/Services/bannerpn.png"
                   alt="banner-image"
-                  class="banner__image w-100"
+                  class="banner__image w-75"
                 />
               </div>
             </div>
@@ -267,7 +267,7 @@
                     class="banner__review__partners__link d-inline-block"
                   >
                     <img
-                      src="./assets/images/reviews/review2.jpeg"
+                      src="./assets/images/reviews/review2.png"
                       alt="partners-logo"
                       class="banner__review__partners__logo w-100"
                     />
@@ -414,7 +414,7 @@
                         class="features__videos-wrapper features__videos-wrapper--negative-margin"
                       >
                         <video
-                          src="./assets/videos/Screen record (1).mp4"
+                          src="./assets/videos/Trello-Record.mp4"
                           poster="./assets/"
                           class="features__videos w-100 h-100"
                           autoplay="autoplay"
@@ -422,7 +422,7 @@
                           muted="muted"
                         >
                           <source
-                            src="./assets/images/videos-poster/"
+                            src="./assets/images/videos-poster"
                             type="video/mp4"
                           />
                         </video>
@@ -481,7 +481,7 @@
                         class="features__videos-wrapper features__videos-wrapper--negative-margin"
                       >
                         <video
-                          src="./assets/videos/features-1b.mp4"
+                          src="./assets/images/Services/video-output-4BC83D4E-A680-4A63-867E-3D8837218AA9 (1).mp4"
                           poster="./assets/images/videos-poster/features-1b.png"
                           class="features__videos w-100 h-100"
                           autoplay="autoplay"
@@ -489,7 +489,7 @@
                           muted="muted"
                         >
                           <source
-                            src="./assets/videos/features-1b.mp4"
+                            src="./assets/images/Services/video-output-4BC83D4E-A680-4A63-867E-3D8837218AA9 (1).mp4"
                             type="video/mp4"
                           />
                         </video>
@@ -497,7 +497,7 @@
                     </div>
                     <div class="col-xl-4 col-lg-6">
                       <h2 class="features__title">
-                        multipotentioality
+                        Multipotentioality
                       </h2>
                       <p class="features__text">
                      Our unique blend of digital marketing expertise, medical knowledge, and technology-led solutions is designed to elevate your brand, empower your operations, and exceed your objectives.
@@ -548,15 +548,15 @@
                         class="features__videos-wrapper features__videos-wrapper--negative-margin"
                       >
                         <video
-                          src="./assets/videos/features-1c.mp4"
-                          poster="./assets/images/videos-poster/features-1c.png"
+                          src="./assets/images/Services/copywriting.mp4"
+
                           class="features__videos w-100 h-100"
                           autoplay="autoplay"
                           loop="true"
                           muted="muted"
                         >
                           <source
-                            src="./assets/videos/features-1c.mp4"
+                            src="./assets/images/Services/copywriting.mp4"
                             type="video/mp4"
                           />
                         </video>
@@ -760,7 +760,7 @@ A single healthcare platform to achieve more with less work
                   <div class="row justify-content-center">
                     <div class="col-xl-6 col-lg-10 text-center mb-2">
                       <h3 class="features__title px-2">
-                   your brand's objectives are not only met but exceeded.
+                   Your brand's objectives are not only met but exceeded.
                       </h3>
                     </div>
                     <div class="col-xl-9 col-lg-11">
@@ -822,10 +822,10 @@ A single healthcare platform to achieve more with less work
           data-toggle="modal"
           data-target="#signUpModal"
         >
-          <span class="features__btn__text d-inline-flex align-items-center"
+          <!-- <span class="features__btn__text d-inline-flex align-items-center"
             >
             <i class="features__btn__icon"></i
-          ></span>
+          ></span> -->
         </button>
       </div>
     </section>
@@ -1406,10 +1406,10 @@ A single healthcare platform to achieve more with less work
           data-toggle="modal"
           data-target="#signUpModal"
         >
-          <span class="features__btn__text d-inline-flex align-items-center"
+          <!-- <span class="features__btn__text d-inline-flex align-items-center"
             >
             <i class="features__btn__icon" ></i
-          ></span>
+          ></span> -->
         </button>
       </div>
     </section>
@@ -1469,7 +1469,7 @@ A single healthcare platform to achieve more with less work
                   >
                 </li> -->
 
-                <li class="nav-item" role="presentation">
+                <!-- <li class="nav-item" role="presentation">
                   <a
                     class="nav-link position-relative"
                     id="pills-design-tab"
@@ -1479,7 +1479,7 @@ A single healthcare platform to achieve more with less work
                     aria-controls="pills-design"
                     aria-selected="false"
                     >Insight</a
-                  >
+                  > -->
                 </li>
                 <li class="nav-item" role="presentation">
                   <a
@@ -1507,11 +1507,19 @@ A single healthcare platform to achieve more with less work
                   <div class="row flex-lg-row-reverse">
                     <div class="col-xl-7 offset-xl-1 col-lg-6 mb-5 mb-lg-0">
                       <div class="features__videos-wrapper">
-                        <img
-                          src="https://www.pinterest.com/pin/668503138460327586/"
-                          alt="features image"
-                          class="img-seo w-100 h-100"
-                        />
+                          <video
+                          src="./assets/images/Services/animation2.mp4"
+                          poster=""
+                          class="features__videos w-100 h-100"
+                          autoplay="autoplay"
+                          loop="true"
+                          muted="muted"
+                        >
+                          <source
+                            src="./assets/images/Services/animation2.mp4"
+                            type="video/mp4"
+                          />
+                        </video>
                       </div>
                     </div>
                     <div class="col-xl-4 col-lg-6">
@@ -1774,11 +1782,21 @@ A single healthcare platform to achieve more with less work
                   <div class="row flex-lg-row-reverse">
                     <div class="col-xl-7 offset-xl-1 col-lg-6 mb-5 mb-lg-0">
                       <div class="features__videos-wrapper">
-                        <div class="appoint"> <img
-                          src="./assets/images/Services/Appointment.png"
-                          alt="features image"
-                          class="appointment w-100 h-100"
-                        /></div>
+                        <div class="appoint">
+                          <video
+                          src="./assets/images/Services/Monitor_Screen_Mockup.mp4"
+                          class="features__videos w-100 h-100"
+                          autoplay="autoplay"
+                          loop="true"
+                          muted="muted"
+                        >
+                          <source
+                            src="./assets/images/Services/Monitor_Screen_Mockup.mp4"
+                            type="video/mp4"
+                          />
+                        </video>
+
+                        </div>
 
                       </div>
                     </div>
@@ -2285,16 +2303,15 @@ A single healthcare platform to achieve more with less work
                   <div class="row flex-lg-row-reverse">
                     <div class="col-xl-7 offset-xl-1 col-lg-6 mb-5 mb-lg-0">
                       <div class="features__videos-wrapper">
-                          <video
-                          src="./assets/videos/IMG_0.mp4"
-                          poster="./assets/images/videos-poster/features-3a.png"
-                          class="features__videos w-60 h-20"
+                            <video
+                          src="./assets/videos/animation3_1.mp4"
+                          class="features__videos w-100 h-100"
                           autoplay="autoplay"
                           loop="true"
                           muted="muted"
                         >
                           <source
-                            src="./assets/videos/IMG_0.mp4"
+                            src="./assets/videos/animation3_1.mp4"
                             type="video/mp4"
                           />
                         </video>
@@ -2364,6 +2381,37 @@ A single healthcare platform to achieve more with less work
                               class="features__details-list__item__content__text"
                             >
                              Keep current patients informed, engaged, and booking future appointments with marketing email campaigns. Create, send, and monitor success directly from your Tebrae dashboard.
+                            </p>
+                          </div>
+                                                   <li class="features__details-list__item d-flex">
+                          <div
+                            class="features__details-list__item__icon-block flex-shrink-0 d-inline-flex align-items-center justify-content-center"
+                          >
+                            <!-- <svg
+                              fill="none"
+                              height="26"
+                              viewBox="0 0 26 26"
+                              width="26"
+                              xmlns="http://www.w3.org/2000/svg"
+                            >
+                              <path
+                                clip-rule="evenodd"
+                                d="m10.1339.866117c.4881.488153.4881 1.279613 0 1.767763l-5.00002 5c-.48815.48816-1.27961.48816-1.76776 0l-2.500003-2.5c-.488156-.48815-.488156-1.27961 0-1.76776.488153-.48816 1.279613-.48816 1.767763 0l1.61612 1.61611 4.11612-4.116113c.48815-.488156 1.27961-.488156 1.76778 0zm1.6161 4.633883c0-.69036.5596-1.25 1.25-1.25h11.25c.6904 0 1.25.55964 1.25 1.25s-.5596 1.25-1.25 1.25h-11.25c-.6904 0-1.25-.55964-1.25-1.25zm-1.6161 4.11612c.4881.48818.4881 1.27958 0 1.76778l-5.00002 5c-.48815.4881-1.27961.4881-1.76776 0l-2.500003-2.5c-.488156-.4882-.488156-1.2796 0-1.7678.488153-.4881 1.279613-.4881 1.767763 0l1.61612 1.6161 4.11612-4.11608c.48815-.48816 1.27961-.48816 1.76778 0zm1.6161 4.63388c0-.6904.5596-1.25 1.25-1.25h11.25c.6904 0 1.25.5596 1.25 1.25s-.5596 1.25-1.25 1.25h-11.25c-.6904 0-1.25-.5596-1.25-1.25zm-1.6161 4.1161c.4881.4882.4881 1.2796 0 1.7678l-5.00002 5c-.48815.4881-1.27961.4881-1.76776 0l-2.500003-2.5c-.488156-.4882-.488156-1.2796 0-1.7678.488153-.4881 1.279613-.4881 1.767763 0l1.61612 1.6161 4.11612-4.1161c.48815-.4881 1.27961-.4881 1.76778 0zm1.6161 4.6339c0-.6904.5596-1.25 1.25-1.25h11.25c.6904 0 1.25.5596 1.25 1.25s-.5596 1.25-1.25 1.25h-11.25c-.6904 0-1.25-.5596-1.25-1.25z"
+                                fill="#2a2e34"
+                                fill-rule="evenodd"
+                              ></path>
+                            </svg> -->
+                          </div>
+                          <div class="features__details-list__item__content">
+                            <h4
+                              class="features__details-list__item__content__title"
+                            >
+                             Attract new patients
+                            </h4>
+                            <p
+                              class="features__details-list__item__content__text"
+                            >
+                            Tebrae marketing campaigns and services enable you and your team to deliver the right message at the right time to current and new patients.
                             </p>
                           </div>
                         </li>
@@ -2700,7 +2748,7 @@ A single healthcare platform to achieve more with less work
                           class="testimonial__card__head__image img-fluid"
                         />
                         <a
-                          href="https://www.youtube.com/watch?v=f_exDBcGYnM"
+                          href="https://vimeo.com/839629912?share=copy"
                           data-autoplay="true"
                           data-vbtype="video"
                           data-gall="testimonialGallery"
@@ -2717,7 +2765,7 @@ A single healthcare platform to achieve more with less work
                     <div class="col-lg-7 d-flex align-items-center">
                       <div class="testimonial__card__body">
                         <p class="testimonial__card__text">
-                         It was a dream working with the professional team at tebrae,/
+                         It was a dream working with the professional team at tebrae,
 						  Procedurally they have everything down to a science,
 						   we were able to launch my clients website ahead of schedule
 						    to rave reviews and site traffic results.
@@ -2795,8 +2843,9 @@ A single healthcare platform to achieve more with less work
                           alt="testimonial image"
                           class="testimonial__card__head__image img-fluid"
                         />
+
                         <a
-                          href="https://www.youtube.com/watch?v=5ZNiLOi7B80"
+                         href="https://vimeo.com/839631833?share=copy"
                           data-autoplay="true"
                           data-vbtype="video"
                           data-gall="testimonialGallery"
@@ -2813,7 +2862,7 @@ A single healthcare platform to achieve more with less work
                     <div class="col-lg-7 d-flex align-items-center">
                       <div class="testimonial__card__body">
                         <p class="testimonial__card__text">
-                         demonstrating great professionalism, the tebrae team
+                         Demonstrating great professionalism, the tebrae team
 						 proved to be amazingly adaptive to the clients needs,
 						 they`re distinguished by their Speed and Flexibility.
                         </p>
@@ -2944,7 +2993,7 @@ A single healthcare platform to achieve more with less work
               >
                 <a href="#!" class="img4">
                   <img
-                    src="./assets/images/Tebrae/0.jpg"
+                    src="./assets/images/help/Support.png"
                     alt="customer-support"
                     class="w-75"
                   />
@@ -3060,6 +3109,7 @@ A single healthcare platform to achieve more with less work
         </div>
       </div>
     </section>
+
 
     <!-- Footer Section -->
     <footer class="footer">
