--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 
 
     <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="icon" href="/assets/images/banner/TebraeLOGOLINES-1.png" type="image/png">
 
         <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-QZFHPSNYBF"></script>
