added language fix

--- a/index - ar.html
+++ b/index - ar.html
@@ -187,8 +187,8 @@
   <div class="lang-dropdown">
     <button class="lang-btn" id="lang-btn"><i class="fas fa-globe"></i></button>
     <div class="lang-dropdown-content">
-      <a class="lang-option" onclick="changeLanguage('ئینگلیزی')" href="index.html" >ئینگلیزی</a>
-      <a class="lang-option" onclick="changeLanguage('عەرەبی')" href="index - ar.html" >عەرەبی</a>
+      <a class="lang-option" onclick="changeLanguage('ئینگلیزی')" href="index.html" >English</a>
+      <a class="lang-option" onclick="changeLanguage('عەرەبی')" href="index - ar.html" >العربية </a>
       <a class="lang-option" onclick="changeLanguage('کوردی')" href="./index - kur.html">کوردی</a>
     </div>
   </div>
@@ -3245,20 +3245,18 @@ TEBRAE
         </div>
         <div class="accordion-item">
           <button id="accordion-button-4" aria-expanded="false">
-            <span class="accordion-title">كيفية الاتصال بك !؟</span>
+            <span class="accordion-title">كيف يمكنني التواصل معكم؟</span>
             <span class="icon" aria-hidden="true"></span>
           </button>
           <div class="accordion-content">
             <p>
-             يمكنك الاتصال بنا على رقم الهاتف هذا:
-+ 964-770-409-7070 أو أرسل لنا بريدًا إلكترونيًا على:
-Info@tebrae.krd
+             يمكنك التواصل معنا على الرقم التالي:+964-770-409-7070 أو إرسال بريد إلكتروني إلينا على Info@tebrae.krd
             </p>
           </div>
         </div>
         <div class="accordion-item">
           <button id="accordion-button-5" aria-expanded="false">
-            <span class="accordion-title">في أي مدن تقدمون خدمات؟</span>
+            <span class="accordion-title">في أي مدن تقدمون الخدمات؟</span>
             <span class="icon" aria-hidden="true"></span>
           </button>
           <div class="accordion-content">
@@ -3583,8 +3581,7 @@ Info@tebrae.krd
                     > -->
                   </a>
                   <p class="footer__copyright mb-0 mt-2">
-                    جميع الحقوق محفوظة لـTebare
-                    <!-- <a
+                    جميع الحقوق محفوظة          <!-- <a
                       href="#!"
                       class="footer__copyright__link d-inline-block position-relative"
                       >الامن</a
@@ -3598,13 +3595,8 @@ Info@tebrae.krd
                       href="#!"
                       class="footer__copyright__link d-inline-block position-relative"
                       >الاحكام والشروط
-
-
-
-
 </a -->
-                    >
-                  </p>
+                                    </p>
                 </div>
                 <div class="col-md-6 mt-4 mt-md-0">
                    <div class="row2">
