--- a/index - kur.html
+++ b/index - kur.html
@@ -187,8 +187,8 @@
   <div class="lang-dropdown">
     <button class="lang-btn" id="lang-btn"><i class="fas fa-globe"></i></button>
     <div class="lang-dropdown-content">
-      <a class="lang-option" onclick="changeLanguage('ئینگلیزی')" href="index.html" >ئینگلیزی</a>
-      <a class="lang-option" onclick="changeLanguage('عەرەبی')" href="index - ar.html" >عەرەبی</a>
+      <a class="lang-option" onclick="changeLanguage('ئینگلیزی')" href="index.html" >English</a>
+      <a class="lang-option" onclick="changeLanguage('عەرەبی')" href="index - ar.html" >العربية </a>
       <a class="lang-option" onclick="changeLanguage('کوردی')" href="./index - kur.html" >کوردی</a>
     </div>
   </div>
@@ -3579,7 +3579,7 @@ info@tebrae.krd
                     > -->
                   </a>
                   <p class="footer__copyright mb-0 mt-2">
-                    هەموو مافەکان لەلایەن @Tebare پارێزراوە
+                    مافەکان پارێزراوە
                     <!-- <a
                       href="#!"
                       class="footer__copyright__link d-inline-block position-relative"
