--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@
     <button class="lang-btn" id="lang-btn"><i class="fas fa-globe"></i></button>
     <div class="lang-dropdown-content">
       <a class="lang-option" onclick="changeLanguage('English')" href="index.html" >English</a>
-      <a class="lang-option" onclick="changeLanguage('Arabic')" href="index - ar.html" >Arabic</a>
-      <a class="lang-option" onclick="changeLanguage('Kurdish')" href="./index - kur.html" >Kurdish</a>
+      <a class="lang-option" onclick="changeLanguage('Arabic')" href="index - ar.html" >العربية </a>
+      <a class="lang-option" onclick="changeLanguage('Kurdish')" href="./index - kur.html" >کوردی</a>
     </div>
   </div>
 
@@ -256,8 +256,6 @@
         aria-expanded="false"
         aria-label="Toggle navigation"
       ></div>
-
-
       <!-- Banner Section -->
       <section class="banner">
         <div class="container">
@@ -2627,7 +2625,7 @@ Info@tebrae.krd
                 <div class="col-xl-auto col-md-3 col-6">
                   <div class="footer__block">
                     <h4 class="footer__block__title text-uppercase">
-                      Products
+                      Services
                     </h4>
                     <ul class="footer__block__list">
                       <li class="footer__block__list__item">
