--- a/index.html
+++ b/index.html
@@ -2731,7 +2731,7 @@ Info@tebrae.krd
                 </div>
                 <div class="col-xl-auto col-md-3 col-6">
                   <div class="footer__block">
-                    <h4 class="footer__block__title text-uppercase">Block</h4>
+                    <h4 class="footer__block__title text-uppercase">Terms and Condittion</h4>
                     <ul class="footer__block__list">
                       <li class="footer__block__list__item">
                         <a href="#!" class="footer__block__list__link"
@@ -2745,7 +2745,7 @@ Info@tebrae.krd
                       </li>
                       <li class="footer__block__list__item">
                         <a href="#!" class="footer__block__list__link"
-                          >Terms</a
+                          >Policies</a
                         >
                       </li>
                     </ul>
